Fix notification alignment Move various styles to theme (alert-window, #secondary-menu)

--- a/less/bootstrap/navs.less
+++ b/less/bootstrap/navs.less
@@ -6,6 +6,8 @@
 // Base class
 // --------------------------------------------------
 
+
+
 .nav {
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
@@ -16,10 +18,8 @@
     position: relative;
     display: block;
 
-    &:first-of-type {
-      > a {
-        padding-left: 0px;
-      }
+    .notifications {
+      padding-left: 15px !important;
     }
 
     > a {
