--- a/less/bootstrap/variables.less
+++ b/less/bootstrap/variables.less
@@ -414,7 +414,7 @@
 //##
 
 //=== Shared nav styles
-@nav-link-padding:                          10px 15px;
+@nav-link-padding:                          10px 15px 10px 0px;
 @nav-link-hover-bg:                         @gray-lighter;
 
 @nav-disabled-link-color:                   @gray-light;
