--- a/less/header.less
+++ b/less/header.less
@@ -482,6 +482,31 @@ html[data-dir="rtl"] {
 	}
 }
 
+#secondary-menu {
+        font-family: "IBM Plex Sans",-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+        font-size: 14px;
+		float: right;
+		max-height: 50px;
+		width: auto;
+		padding-top: .75em;
+			ul {
+			li {
+			    border: 2px solid #00ab44;
+			    border-radius: 2px;
+			    float: left;
+				//background-color: #00ab44;
+				list-style: none;
+                text-align: center;
+                padding: 5px;
+                margin-left: 30px;
+                a {
+                    color: white !important;
+                    transition: background-color .4s,color .4s ease-in-out;
+                }
+			}
+		    }
+}
+
 @keyframes fa-spin {
 	0% {
 		-webkit-transform: rotate(0deg);
