--- a/less/modules/alerts.less
+++ b/less/modules/alerts.less
@@ -6,6 +6,8 @@
 	right: 20px;
 	bottom: 0px;
 
+	color: white;
+
 	.alert {
 		&::before {
 			position: relative;
@@ -37,19 +39,19 @@
 			&.alert-info::before {
 				background-color: lighten(@material-info, 25%);
 			}
-			
+
 			&.alert-warning::before {
 				background-color: lighten(@material-warning, 25%);
 			}
-			
+
 			&.alert-success::before {
 				background-color: lighten(@material-success, 25%);
 			}
-			
+
 			&.alert-danger::before {
 				background-color: lighten(@material-danger, 25%);
 			}
-			
+
 			&::before {
 				width: ~"calc(100% + 50px)";
 			}
